--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "react-scroll-to-bottom": "^4.2.0",
     "tailwindcss": "3.3.2",
