--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["daisyui", "openai", "tailwindcss", "Timerange"]
+  "cSpell.words": ["daisyui", "dalle", "openai", "tailwindcss", "Timerange"]
 }
