--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # env.example
-OPENAI_API_KEY=
-SPOTIFY_CLIENT_ID=
-SPOTIFY_CLIENT_SECRET=
-NEXTAUTH_URL=
-NEXTAUTH_SECRET=
+OPENAI_API_KEY=your-openai-api-key
+SPOTIFY_CLIENT_ID=your-spotify-client-id
+SPOTIFY_CLIENT_SECRET=your-spotify-client-secret
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-nextauth-secret
